--- a/include/libft/Makefile
+++ b/include/libft/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: pborrull <pborrull@student.42barcel>       +#+  +:+       +#+         #
+#    By: pborrull <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/09/19 13:23:13 by pborrull          #+#    #+#              #
-#    Updated: 2023/11/30 11:37:38 by pborrull         ###   ########.fr        #
+#    Created: 2024/08/01 14:09:31 by pborrull          #+#    #+#              #
+#    Updated: 2024/08/01 14:10:27 by pborrull         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
